# gcodeui

./: .gitignore  AGENTS.md  README.md  config.yaml  gcodeui.py  pyproject.toml  requriements.txt
gcodeui/: __init__.py  gcodeui.py  serial_worker.py
